@startuml er-diagram

skinparam linetype ortho
skinparam roundcorner 10

package "UserGroup" {
  entity "users" {
    *id : UUID <<PK>>
    --
    telegram_id : BIGINT
    name : VARCHAR
    role : VARCHAR
    is_banned: BOOLEAN
    created_at : TIMESTAMP
  }

  entity "tutors" {
    *id : UUID <<PK>> <<FK users.id>>
    --
    is_active : BOOLEAN
    bio : VARCHAR
    tags : TEXT[]
    rating : INTEGER
    response_count : BIGINT
    created_at : TIMESTAMP
  }

  entity "reviews" {
    *id : UUID <<PK>>
    --
    tutor_id : UUID <<FK tutors.id>>
    order_id : UUID
    rating : INT
    comment : VARCHAR
    created_at : TIMESTAMP
  }
}

package "OrderGroup" {
  entity "orders" {
    *id : UUID <<PK>>
    --
    name : VARCHAR
    student_id : UUID
    title : VARCHAR
    description : VARCHAR
    grade : VARCHAR
    tags : TEXT[]
    min_price : INTEGER
    max_price : INTEGER
    status : VARCHAR
    response_count : INTEGER
    created_at : TIMESTAMPT
    updated_at : TIMESTAMPT
  }

  entity "responses" {
    *id : UUID <<PK>>
    --
    order_id : UUID <<FK orders.id>>
    tutor_id : UUID
    name : VARCHAR
    tutor_username : VARCHAR
    greetings : VARCHAR
    is_final : BOOLEAN
    created_at : TIMESTAMPT
  }
}

package "TagGroup" {
  entity "tags" {
    *id : UUID <<PK>>
    --
    tag_name : VARCHAR
  }

  entity "order_tags" {
    *order_id : UUID
    *tag_id : UUID <<PK>> <<FK tags.id>>
  }

  entity "tutor_tags" {
    *tutor_id : BIGINT <<PK>>
    *tag_id : UUID <<FK tags.id>>
  }

  entity "suggest_table" {
    *tutor_id : BIGINT
    *order_id : UUID
  }

  entity "short_orders" {
    *order_id : UUID
    --
    order_name : VARCHAR
    student_id : BIGINT
    status : VARCHAR
    created_at : TIMESTAMP
  }
}

users ||--o{ tutors : id
tutors ||--o{ responses : tutor_id
orders ||--o{ responses : order_id
orders ||--o{ reviews : order_id
tutors ||--o{ reviews : tutor_id
orders ||--o{ order_tags : order_id
tags ||--o{ order_tags : tag_id
tutors ||--o{ tutor_tags : tutor_id
tags ||--o{ tutor_tags : tag_id

tutors ||--o{ suggest_table : tutor_id
orders ||--o{ suggest_table : order_id

@enduml
